--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,27 @@
-server.port=8080
+#server.port=8080
+
+server.port=8081
+
 #Hibernate
 spring.datasource.url=jdbc:mysql://localhost:3306/gestionEdificio?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=177196
+#spring.datasource.password=177196
+spring.datasource.password=
+
+
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57InnoDBDialect
+
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.hibernate.SQL=debug
 
 spring.jackson.time-zone=America/Lima
